Apply correct overflow to canvas' layers

--- a/bokehjs/src/less/canvas.less
+++ b/bokehjs/src/less/canvas.less
@@ -6,8 +6,10 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .bk-events {
   touch-action: none;
+  overflow: visible;
 }
